tests/ui/fail/exhaustive_match_chain_poll.stderr
error[E0004]: non-exhaustive patterns: `_` not covered
  --> tests/ui/fail/exhaustive_match_chain_poll.rs:10:11
   |
10 |     match poll {
   |           ^^^^ pattern `_` not covered
   |
note: `ChainPollCapability` defined here
  --> src/providers/mod.rs
   |
   | pub enum ChainPollCapability {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   = note: the matched value is of type `ChainPollCapability`
   = note: `ChainPollCapability` is marked as non-exhaustive, so a wildcard `_` is necessary to match exhaustively
help: ensure that all possible cases are being handled by adding a match arm with a wildcard pattern or an explicit pattern as shown
   |
14 ~         } => "poll",
15 ~         _ => todo!(),
   |
